refactor:rearrangement code

--- a/templates/base/root.html
+++ b/templates/base/root.html
@@ -32,6 +32,10 @@
     <link rel="stylesheet" href="{% static 'css/app-light.css'%}" id="lightTheme">
     <link rel="stylesheet" href="{% static 'css/app-dark.css'%}" id="darkTheme" disabled>
     <link rel="stylesheet" href="{% static 'css/personalized.css'%}" >
+
+  {% block head %}
+
+  {% endblock %}
   </head>
   <body class="vertical  light">
      <div class="wrapper">
