--- a/templates/hebergement/animaux/liste_animaux_on_peut_heberger.html
+++ b/templates/hebergement/animaux/liste_animaux_on_peut_heberger.html
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12">
-                <h2 class="h3 mb-3 page-title">Ajouter animaux</h2>
+                <h2 class="h3 mb-3 page-title">liste des animaux que <span class="text-primary">Mon vet'Conseil </span> peut hébergés</h2>
                 <div class="row">
                     <!-- Striped rows -->
                     <div class="col-md-12 my-4">
@@ -37,12 +37,9 @@
                                             </div>
                                         </th>
                                         <th>ID</th>
-                                        <th>Purchase Date</th>
-                                        <th>desigantion</th>
-                                        <th>proprietaire</th>
-                                        <th>contact</th>
-                                        <th>type animal</th>
-                                        <th>Action</th>
+                                        <th>race</th>
+                                        <th>-</th>
+
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -54,46 +51,18 @@
                                             </div>
                                         </td>
                                         <td>4574</td>
-                                        <td>2019-09-11 10:22:04</td>
-                                        <td>Kitra Knapp</td>
-                                        <td>(132) 339-7423</td>
-                                        <td>P.O. Box 944, 4739 Suspendisse Road</td>
-                                        <td>chien</td>
+                                        <td>bouledogue</td>
 
                                         <td><button class="btn btn-sm dropdown-toggle more-horizontal" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <span class="text-muted sr-only">Action</span>
                                         </button>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="#">Edit</a>
-                                                <a class="dropdown-item" href="#">Remove</a>
-                                                <a class="dropdown-item" href="#">Assign</a>
+                                            <div class="dropdown-menu dropdown-menu-right p-3">
+                                                <a href="#" class=" btn btn-outline-primary ">modifier</a>
+                                                <a href="#" class="btn btn-outline-danger ">supprimer</a>
                                             </div>
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input" id="2132">
-                                                <label class="custom-control-label" for="2132"></label>
-                                            </div>
-                                        </td>
-                                        <td>2132</td>
-                                        <td>2019-08-23 12:28:40</td>
-                                        <td>Blake Orr</td>
-                                        <td>(257) 565-4706</td>
-                                        <td>P.O. Box 939, 9156 Sollicitudin St.</td>
-                                        <td>chat</td>
 
-                                        <td><button class="btn btn-sm dropdown-toggle more-horizontal" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <span class="text-muted sr-only">Action</span>
-                                        </button>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="#">Edit</a>
-                                                <a class="dropdown-item" href="#">Remove</a>
-                                                <a class="dropdown-item" href="#">Assign</a>
-                                            </div>
-                                        </td>
-                                    </tr>
                                     </tbody>
                                 </table>
                                 <nav aria-label="Table Paging" class="mb-0 text-muted">
