--- a/templates/hebergement/hebergement/informations_hebergement.html
+++ b/templates/hebergement/hebergement/informations_hebergement.html
@@ -18,7 +18,6 @@
                                 <div class="row align-items-center">
                                     <div class="col-3 text-center">
                           <span class="circle circle-lg bg-light">
-{#                            <?xml version="1.0" ?>#}
                               <img src="{% static 'assets/icons/cat_fish.png' %}" alt="">
                           </span>
                                     </div> <!-- .col -->
@@ -64,9 +63,33 @@
                             <div class="card-footer">
                                 <a href="/hebergement/list_foods" class="d-flex justify-content-between text-muted"><span>a propos de nourriture</span><i class="fe fe-chevron-right"></i></a>
                             </div> <!-- .card-footer -->
-                        </div> <!-- .card -->
-                    </div> <!-- .col-md-->
+                        </div>
+                    </div>
                     <!-- .col-md-->
+                <div class="col-md-4">
+                        <div class="card mb-4 shadow">
+                            <div class="card-body my-n3">
+                                <div class="row align-items-center">
+                                    <div class="col-3 text-center">
+{#                                        icone pour nourriture #}
+                                      <span class="circle circle-lg p-2 bg-light">
+                                          <i class="fe fe-dollar-sign fe-32"></i>
+                                      </span>
+                                    </div> <!-- .col -->
+                                    <div class="col">
+                                        <a href=" {% url 'load_tarifs' %}">
+                                            <h3 class="h5 mt-4 mb-1">Tarifs</h3>
+                                        </a>
+                                        <p class="text-muted">
+                                            Cliquez ici pour voir les tarifs
+                                        </p>
+                                    </div> <!-- .col -->
+                                </div> <!-- .row -->
+                            </div> <!-- .card-body -->
+                            <div class="card-footer">
+                                <a href="/hebergement/list_foods" class="d-flex justify-content-between text-muted"><span>a propos des tarifs </span><i class="fe fe-chevron-right"></i></a>
+                            </div> <!-- .card-footer -->
+                        </div> <!-- .card -->
                 </div> <!-- .row-->
             </div>
         </div>
