--- a/templates/hebergement/nourriture/ajouter_nourriture.html
+++ b/templates/hebergement/nourriture/ajouter_nourriture.html
@@ -21,35 +21,37 @@ ajouter une nourriture pour animaux
                         <form action="">
                             <div class="form-group mb-3">
                         <label for="simpleinput">descriptions</label>
-                        <input type="text" id="simpleinput" class="form-control">
+                        <input type="text" id="simpleinput" class="form-control" name="description">
                       </div>
 
 
                         <div class="form-group mb-3">
                         <label for="simpleinput">designation</label>
-                        <input type="text" id="simpleinput2" class="form-control">
+                        <input type="text" id="simpleinput2" class="form-control" name="designation">
                       </div>
 
                         <div class="form-group">
                              <div>
                                  <label for="simpleinput4">type d'animaux</label>
                              </div>
-                             <div class="form-check form-check-inline mb-3">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                                <label class="form-check-label" for="inlineCheckbox1">1</label>
-                              </div>
-
-                              <div class="form-check form-check-inline mb-3">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                                <label class="form-check-label" for="inlineCheckbox2">2</label>
-                              </div>
+                             {% for race in races %}
+                                 <div class="form-check form-check-inline mb-3">
+                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox{{ race.id }}" name="attribution_checkbox" value="{{ race.id }}">
+                                    <label class="form-check-label" for="inlineCheckbox{{ race.id }}">{{ race.designation }}</label>
+                                  </div>
+                             {% endfor %}
                         </div>
 
 
                         <div class="form-group mb-3">
-                        <label for="simpleinput3">prix par jour</label>
-                        <input type="number" id="simpleinput3" class="form-control">
-                      </div>
+                                <label for="simpleinput3">Prix par Unite</label>
+                                <input type="number" id="simpleinput3" class="form-control" name="prix_unite">
+                            </div>
+
+                            <div class="form-group mb-3">
+                                <label for="simpleinput3">Unite</label>
+                                <input type="number" id="simpleinput3" class="form-control" name="unite">
+                            </div>
 
                         <div class="form-group">
                             <button class="btn btn-outline-primary" type="submit">valider</button>
