--- a/templates/hebergement/tarifs/details_tarifs.html
+++ b/templates/hebergement/tarifs/details_tarifs.html
@@ -57,8 +57,7 @@ Mon Vet Conseil - tarifs
                                             <span class="text-muted sr-only">Action</span>
                                         </button>
                                             <div class="dropdown-menu dropdown-menu-right p-3">
-                                                <a href="#" class=" btn btn-outline-primary ">modifier</a>
-                                                <a href="#" class="btn btn-outline-danger ">supprimer</a>
+                                                <a href="{% url 'modify_tarif' id_tarif=tarifs.id %}" class=" btn btn-outline-primary ">modifier</a>
                                             </div>
                                         </td>
                                     </tr>
