fix: ajouter un badge pour voir le nombre de demandes d'hebergement

--- a/templates/hebergement/hebergement/Gestion_hebergement.html
+++ b/templates/hebergement/hebergement/Gestion_hebergement.html
@@ -61,7 +61,7 @@ gestion d'hébergement
                         <div class="card shadow mb-4">
                             <div class="card-body">
                                 <a href="{% url 'load_hosting_request' %}" class="btn btn-outline-primary">
-                                    <span class="badge badge-danger rounded-circle" >1</span>
+                                    <span class="badge badge-danger rounded-circle" >{{ nombre_hebergement_attente }}</span>
                                     <span>liste des demandes</span>
                                 </a>
                             </div>
