refactor: rearrangements des urls

--- a/templates/hebergement/animaux/liste_animaux_on_peut_heberger.html
+++ b/templates/hebergement/animaux/liste_animaux_on_peut_heberger.html
@@ -21,7 +21,7 @@
                                     </div>
                                     <div class="col ml-auto">
                                         <div class="dropdown float-right">
-                                            <button class="btn btn-primary float-right ml-3" type="button">ajouter +</button>
+                                            <a href="{% url 'Add_new_type_animals' %}" class="btn btn-primary float-right ml-3" type="button">ajouter +</a>
                                         </div>
                                     </div>
                                 </div>
