--- a/templates/hebergement/nourriture/liste_nourriture.html
+++ b/templates/hebergement/nourriture/liste_nourriture.html
@@ -11,9 +11,14 @@
       <div class="col-12">
 
       <div class="row">
-                    <div class="col-5 m-3 p-3">
+                <div class="row col-5 m-3 p-3">
                         <h2 class="mb-2 page-title">Liste des nourritures </h2>
                     </div>
+                    <div class="col m-5 pr-2">
+                       <div class="dropdown float-right">
+                             <a href="{% url 'add_new_type_food' %}" class="btn btn-primary float-right ml-3" type="button">ajouter +</a>
+                       </div>
+                     </div>
 
                 </div>
 
