--- a/templates/base/root.html
+++ b/templates/base/root.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="{% static 'css/app-light.css'%}" id="lightTheme">
     <link rel="stylesheet" href="{% static 'css/app-dark.css'%}" id="darkTheme" disabled>
     <link rel="stylesheet" href="{% static 'css/personalized.css'%}" >
+    <link rel="stylesheet" href="{% static 'css/badge.css'%}" >
 
   {% block head %}
 
