feat: ajout message reussi, ajout nourriture

--- a/templates/base/root.html
+++ b/templates/base/root.html
@@ -90,6 +90,7 @@
     <script src="{% static 'js/dropzone.min.js'%}"></script>
     <script src="{% static 'js/uppy.min.js'%}"></script>
     <script src="{% static 'js/quill.min.js'%}"></script>
+  <script src="{% static 'js/ajout_nourriture.js'%}"></script>
   <script src={% static '/fullcalendar-6.1.8/dist/index.global.js' %}></script>
 
 {#      <script src="{% static  'js/fullcalendar.js'%}"></script>#}
