refactor: mise a jour de codes

--- a/templates/hebergement/hebergement/Gestion_hebergement.html
+++ b/templates/hebergement/hebergement/Gestion_hebergement.html
@@ -92,6 +92,7 @@ gestion d'hébergement
                                 </a>
 
                                 <a href="{% url 'load_hosting_reservation' %}" class="btn btn-outline-primary col-5 m-1">
+                                    <span class="indicator" >{{ nombre_reservations }}</span>
                                     <span>liste des reservations</span>
                                 </a>
                                 </div>
