--- a/templates/hebergement/hebergement/ajout_hebergement/ajout_hebergement.html
+++ b/templates/hebergement/hebergement/ajout_hebergement/ajout_hebergement.html
@@ -19,13 +19,14 @@
                                 <form class="needs-validation" action="{% url 'add_new_hosting_request' %}" method="post">
                                     {% csrf_token %}
                                     {% if form.errors %}
-                                        <ul class="errorlist">
-                                            {% for field in form %}
-                                                {% for error in field.errors %}
-                                                    <li>{{ error }}</li>
+                                        <div class="alert alert-danger" role="alert">
+
+                                                {% for field in form %}
+                                                    {% for error in field.errors %}
+                                                        <p class="mt-3"><span class="fe fe-minus-circle fe-16 mr-2"></span> {{ error }}</p>
+                                                    {% endfor %}
                                                 {% endfor %}
-                                            {% endfor %}
-                                        </ul>
+                                         </div>
                                     {% endif %}
                                     <div>
                                         <h4>details clients  </h4>
