--- a/templates/base/root_nav_sidebar.html
+++ b/templates/base/root_nav_sidebar.html
@@ -98,6 +98,12 @@
                         <span class="ml-3 item-text">Postes </span>
                     </a>
                 </li>
+                <li class="nav-item ">
+                    <a href="{% url 'liste_race' %}" class=" nav-link">
+                        <i class="fe fe-box fe-16"></i>
+                        <span class="ml-3 item-text">Races </span>
+                    </a>
+                </li>
 
             </ul>
 
